responsive and browser bugfixes, fixed layout issue in my account

--- a/wp-content/themes/custom/scss/site/_home.scss
+++ b/wp-content/themes/custom/scss/site/_home.scss
@@ -45,9 +45,32 @@
 
 #home-hero{
 
+	.home-hero-heading{
+		@media screen and (max-height: 700px) {
+			font-size: 35px;
+		}
+	}
+
+	.home-hero-subheading{
+		@media screen and (max-height: 700px) {
+			font-size: 19px;
+		}
+	}
+
 	.home-hero-separator{
 		margin-top: 1.8em;
 		margin-bottom: 1.6em;
+
+		@media screen and (max-height: 700px) {
+			margin-top: 1.0em;
+			margin-bottom: 1.0em;
+		}
+	}
+
+	.home-hero-link{
+		@media screen and (max-height: 700px) {
+			margin-top: 1.5em;
+		}
 	}
 
 	.home-hero-link-button{
@@ -63,7 +86,11 @@
 		}
 
 		@media screen and (max-width: $md) {
-			padding: 10px 20px 9px 20px;
+			padding: 7px 15px 5px 15px;
+		}
+
+		@media screen and (max-height: 700px) {
+			padding: 7px 15px 5px 15px;
 		}
 
 		.icon:before{
